1. Move CommentStatus enum out of comment entity; 2. Remove langCode from post methods of all controllers 3. Completely change mapper classes and methods 4. Set temporary default langCode 5. For now if translation is not exist sending empty list.